[gd_scene load_steps=3 format=3 uid="uid://f5f1j7xa65j7"]

[ext_resource type="Script" path="res://UX/UIStages/character_select.gd" id="1_hvbh8"]
[ext_resource type="Texture2D" uid="uid://dkwtxvgul2acj" path="res://UX/CharSelTest.png" id="3_tnxm6"]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource("1_hvbh8")

[node name="up" type="Sprite2D" parent="."]
position = Vector2(960, 140)
texture = ExtResource("3_tnxm6")

[node name="up_right" type="Sprite2D" parent="."]
position = Vector2(1243, 257)
texture = ExtResource("3_tnxm6")

[node name="right" type="Sprite2D" parent="."]
position = Vector2(1360, 540)
texture = ExtResource("3_tnxm6")

[node name="down_right" type="Sprite2D" parent="."]
position = Vector2(1243, 823)
texture = ExtResource("3_tnxm6")

[node name="down" type="Sprite2D" parent="."]
position = Vector2(960, 940)
texture = ExtResource("3_tnxm6")

[node name="down_left" type="Sprite2D" parent="."]
position = Vector2(677, 823)
texture = ExtResource("3_tnxm6")

[node name="left" type="Sprite2D" parent="."]
position = Vector2(560, 540)
texture = ExtResource("3_tnxm6")

[node name="up_left" type="Sprite2D" parent="."]
position = Vector2(677, 257)
texture = ExtResource("3_tnxm6")
